--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"storybook": "start-storybook -p 6006",
 		"build-storybook": "build-storybook",
-		"build": "rollup -c"
+		"build": "rollup -c",
+		"prepublishOnly": "npm run build"
 	},
 	"keywords": [
 		"react confirm",
