--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"rollup": "^2.53.0",
 		"rollup-plugin-babel": "^4.4.0",
 		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup-plugin-copy": "^3.4.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4"
 	},
 	"peerDependencies": {
