--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
-sudo: false
-
 language: node_js
 
 node_js:
     - node
+
+cache:
+    directories:
+        - node_modules
+install:
+    - npm ci
 
 script:
     - npm run lint
