--- a/package.json
+++ b/package.json
@@ -19,14 +19,16 @@
 	"scripts": {
 		"build": "rollup -c",
 		"build-storybook": "build-storybook",
-		"lint": "eslint ./src",
-		"lint:fix": "eslint ./src --fix",
+		"lint": "eslint .",
+		"lint:fix": "eslint . --fix",
 		"prepublishOnly": "npm run test && npm run build",
 		"storybook": "start-storybook -p 6006",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"test:coverage": "jest --coverage",
-		"test:coveralls": "jest --coverage && coveralls < coverage/lcov.info"
+		"test:coveralls": "jest --coverage && coveralls < coverage/lcov.info",
+		"depcheck": "depcheck",
+		"ncu": "ncu"
 	},
 	"keywords": [
 		"react confirm",
@@ -41,28 +43,29 @@
 	"author": "Animesh Jain",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "^7.14.6",
-		"@babel/plugin-transform-runtime": "^7.14.5",
-		"@babel/preset-env": "^7.14.7",
+		"@babel/core": "^7.15.0",
+		"@babel/plugin-transform-runtime": "^7.15.0",
+		"@babel/preset-env": "^7.15.0",
 		"@babel/preset-react": "^7.14.5",
-		"@material-ui/core": "^4.12.1",
-		"@rollup/plugin-node-resolve": "^13.0.0",
-		"@storybook/addon-actions": "^6.3.4",
-		"@storybook/addon-essentials": "^6.3.4",
-		"@storybook/addon-links": "^6.3.4",
-		"@storybook/react": "^6.3.4",
+		"@material-ui/core": "^4.12.3",
+		"@rollup/plugin-node-resolve": "^13.0.4",
+		"@storybook/addon-actions": "^6.3.7",
+		"@storybook/addon-essentials": "^6.3.7",
+		"@storybook/addon-links": "^6.3.7",
+		"@storybook/react": "^6.3.7",
 		"@testing-library/react": "^12.0.0",
 		"babel-loader": "^8.2.2",
 		"coveralls": "^3.1.1",
-		"eslint": "^7.30.0",
+		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-jest": "^24.3.6",
-		"eslint-plugin-react": "^7.24.0",
-		"jest": "^27.0.6",
+		"eslint-plugin-jest": "^24.4.0",
+		"eslint-plugin-prettier": "^4.0.0",
+		"eslint-plugin-react": "^7.25.1",
+		"jest": "^27.1.0",
 		"prettier": "^2.3.2",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"rollup": "^2.53.0",
+		"rollup": "^2.56.3",
 		"rollup-plugin-babel": "^4.4.0",
 		"rollup-plugin-commonjs": "^10.1.0",
 		"rollup-plugin-copy": "^3.4.0",
@@ -71,7 +74,7 @@
 	"peerDependencies": {
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"@material-ui/core": "^4.12.1"
+		"@material-ui/core": "^4.12.3"
 	},
 	"dependencies": {},
 	"babel": {
