--- a/package.json
+++ b/package.json
@@ -50,9 +50,9 @@
 		"@material-ui/core": "^4.12.3",
 		"@rollup/plugin-node-resolve": "^13.0.4",
 		"@storybook/addon-actions": "^6.3.7",
-		"@storybook/addon-essentials": "^6.3.7",
+		"@storybook/addon-essentials": "^6.1.21",
 		"@storybook/addon-links": "^6.3.7",
-		"@storybook/react": "^6.3.7",
+		"@storybook/react": "^6.3.8",
 		"@testing-library/react": "^12.0.0",
 		"babel-loader": "^8.2.2",
 		"coveralls": "^3.1.1",
@@ -72,11 +72,10 @@
 		"rollup-plugin-peer-deps-external": "^2.2.4"
 	},
 	"peerDependencies": {
-		"react": "^17.0.2",
-		"react-dom": "^17.0.2",
-		"@material-ui/core": "^4.12.3"
+		"@material-ui/core": "^4.12.3",
+		"react": "^16.8.0 || ^17.0.0",
+		"react-dom": "^16.8.0 || ^17.0.0"
 	},
-	"dependencies": {},
 	"babel": {
 		"presets": [
 			"@babel/preset-env",
