--- a/package.json
+++ b/package.json
@@ -43,38 +43,40 @@
 	"author": "Animesh Jain",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/core": "^7.15.0",
-		"@babel/plugin-transform-runtime": "^7.15.0",
-		"@babel/preset-env": "^7.15.0",
+		"@babel/core": "^7.15.8",
+		"@babel/plugin-transform-runtime": "^7.15.8",
+		"@babel/preset-env": "^7.15.8",
 		"@babel/preset-react": "^7.14.5",
-		"@material-ui/core": "^4.12.3",
+		"@emotion/react": "^11.4.1",
+		"@emotion/styled": "^11.3.0",
+		"@mui/material": "^5.0.3",
+		"@rollup/plugin-babel": "^5.3.0",
+		"@rollup/plugin-commonjs": "^21.0.0",
 		"@rollup/plugin-node-resolve": "^13.0.4",
 		"@storybook/addon-actions": "^6.3.7",
 		"@storybook/addon-essentials": "^6.1.21",
 		"@storybook/addon-links": "^6.3.7",
-		"@storybook/react": "^6.3.8",
-		"@testing-library/react": "^12.0.0",
+		"@storybook/react": "^6.3.10",
+		"@testing-library/react": "^12.1.2",
 		"babel-loader": "^8.2.2",
 		"coveralls": "^3.1.1",
 		"eslint": "^7.32.0",
 		"eslint-config-prettier": "^8.3.0",
-		"eslint-plugin-jest": "^24.4.0",
+		"eslint-plugin-jest": "^24.5.2",
 		"eslint-plugin-prettier": "^4.0.0",
-		"eslint-plugin-react": "^7.25.1",
-		"jest": "^27.1.0",
-		"prettier": "^2.3.2",
+		"eslint-plugin-react": "^7.26.1",
+		"jest": "^27.2.5",
+		"prettier": "^2.4.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"rollup": "^2.56.3",
-		"rollup-plugin-babel": "^4.4.0",
-		"rollup-plugin-commonjs": "^10.1.0",
+		"rollup": "^2.58.0",
 		"rollup-plugin-copy": "^3.4.0",
 		"rollup-plugin-peer-deps-external": "^2.2.4"
 	},
 	"peerDependencies": {
-		"@material-ui/core": "^4.12.3",
-		"react": "^16.8.0 || ^17.0.0",
-		"react-dom": "^16.8.0 || ^17.0.0"
+		"@mui/material": "^5.0.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
 	},
 	"babel": {
 		"presets": [
