--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,6 +1,6 @@
 # This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # Fo more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-name: Running tests
+name: Test Coveralls
 
 on:
   pull_request:
@@ -25,3 +25,7 @@ jobs:
     - run: npm ci
     - run: npm run build --if-present
     - run: npm run test:coveralls
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
