--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,7 +24,7 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: npm run test -- --coverage
+    - run: npm run test:coverage
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
