--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,7 +8,7 @@ on:
     types: [published]
 
 jobs:
-  publish-npm:
+  publish-package:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -18,6 +18,8 @@ jobs:
         with:
           node-version: 14
           registry-url: https://registry.npmjs.org/
+      - run: git config --global user.name "Animesh Jain"
+      - run: git config --global user.email "animesh.jain1203@gmail.com"
       - run: npm ci
       - run: npm version ${{ github.event.release.tag_name }}
       - run: npm publish
