--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	},
 	"main": "dist/index.js",
 	"module": "dist/index.esm.js",
+	"types": "dist/index.d.ts",
 	"files": [
 		"dist"
 	],
@@ -47,17 +48,21 @@
 		"@babel/plugin-transform-runtime": "^7.15.8",
 		"@babel/preset-env": "^7.15.8",
 		"@babel/preset-react": "^7.14.5",
+		"@babel/preset-typescript": "^7.16.7",
 		"@emotion/react": "^11.4.1",
 		"@emotion/styled": "^11.3.0",
 		"@mui/material": "^5.0.3",
 		"@rollup/plugin-babel": "^5.3.0",
 		"@rollup/plugin-commonjs": "^21.0.0",
 		"@rollup/plugin-node-resolve": "^13.0.4",
+		"@rollup/plugin-typescript": "^8.3.1",
 		"@storybook/addon-actions": "^6.3.7",
 		"@storybook/addon-essentials": "^6.1.21",
 		"@storybook/addon-links": "^6.3.7",
 		"@storybook/react": "^6.3.10",
 		"@testing-library/react": "^12.1.2",
+		"@types/jest": "^27.4.1",
+		"@types/react": "^17.0.39",
 		"babel-loader": "^8.2.2",
 		"coveralls": "^3.1.1",
 		"eslint": "^7.32.0",
@@ -71,7 +76,10 @@
 		"react-dom": "^17.0.2",
 		"rollup": "^2.58.0",
 		"rollup-plugin-copy": "^3.4.0",
-		"rollup-plugin-peer-deps-external": "^2.2.4"
+		"rollup-plugin-dts": "^4.2.0",
+		"rollup-plugin-peer-deps-external": "^2.2.4",
+		"rollup-plugin-terser": "^7.0.2",
+		"typescript": "^4.6.2"
 	},
 	"peerDependencies": {
 		"@mui/material": "^5.0.3",
@@ -81,7 +89,8 @@
 	"babel": {
 		"presets": [
 			"@babel/preset-env",
-			"@babel/preset-react"
+			"@babel/preset-react",
+			"@babel/preset-typescript"
 		],
 		"env": {
 			"test": {
